@@ -1,5 +1,13 @@
 2004-06-12  Mark McLoughlin  <mark@skynet.ie>
 
+	Patch from Julio M. Merino Vidal <jmmv@menta.net>
+	in bug #134247.
+
+	* doc/gconf/Makefile.am: don't create a directory if
+	its not needed.
+
+2004-06-12  Mark McLoughlin  <mark@skynet.ie>
+
 	64-bit fix from Joe Marcus Clarke <marcus@freebsd.org>
 
 	* backends/markup-tree.c: (parse_tree): the length
